[package]
name = "kytan"
version = "0.0.1"
authors = ["Chang Lan <clan@eecs.berkeley.edu>"]
edition = "2018"

[dependencies]
libc = "*"
getopts = "*"
mio = "*"
serde = "*"
serde_derive = "*"
bincode = "*"
log = "0.4.8"
env_logger = "*"
dns-lookup = { git = "https://github.com/windoze/dns-lookup.git" }
snap = "*"
rand = "*"
transient-hashmap = "*"
ring = "*"
failure = "0.1.6"
