[package]
name = "kytan"
version = "0.0.1"
authors = ["Chang Lan <clan@eecs.berkeley.edu>"]
edition = "2018"

[dependencies]
libc = "0.2.66"
getopts = "0.2.21"
mio = "0.6.14"
serde = "1.0.37"
serde_derive = "1.0.37"
bincode = "1.0.0"
log = "0.4.8"
env_logger = "0.5.6"
dns-lookup = "1.0.0"
snap = "0.2.4"
rand = "0.4.2"
transient-hashmap = "0.4.1"
ring = "0.16"
failure = "0.1.6"
err-derive = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
parking_lot = "0.9"
system-configuration = "0.2"
